# mcp-test

./: README.md
mcp_client/: client.py  old_client.py  pyproject.toml
mcp_server/: pyproject.toml
mcp_server/arxiv_server/: server.py
mcp_server/weather_server/: server.py
